--- a/public/index.html
+++ b/public/index.html
@@ -1,88 +1,179 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+    <meta name="description" content="From small to large projects, we look forward to getting you what you want out of your yard. Our team will design a beautiful, useful space for your family." />
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/8.3.2/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/8.3.2/firebase-auth.js"></script>
-    <script defer src="/__/firebase/8.3.2/firebase-database.js"></script>
-    <script defer src="/__/firebase/8.3.2/firebase-firestore.js"></script>
-    <script defer src="/__/firebase/8.3.2/firebase-functions.js"></script>
-    <script defer src="/__/firebase/8.3.2/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/8.3.2/firebase-storage.js"></script>
-    <script defer src="/__/firebase/8.3.2/firebase-analytics.js"></script>
-    <script defer src="/__/firebase/8.3.2/firebase-remote-config.js"></script>
-    <script defer src="/__/firebase/8.3.2/firebase-performance.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    <!-- Normalize -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" integrity="sha256-t2/7smZfgrST4FS1DT0bs/KotCM74XlcqZN5Vu7xlrw=" crossorigin="anonymous" type="text/css" />
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" type="text/css" />
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Lora" type="text/css" />
+    <link rel="stylesheet" href="fonts/didot/didot.css" type="text/css" />
+    <link rel="stylesheet" href="fonts/futura-pt/futura-pt-heavy.css" type="text/css" />
+    <link rel="stylesheet" href="fonts/economica/economica.css" type="text/css" />
+    <link rel="stylesheet" href="fonts/minion/minion-pro.css" type="text/css" />
+
+    <link rel="stylesheet" href="css/theme.css" type="text/css" />
+    <link rel="stylesheet" href="css/navigation.css" type="text/css" />
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <link rel="stylesheet" href="css/home.css" type="text/css" />
+
+    <title>Ground Effects</title>
+</head>
+<body>
+
+    <header id="top" data-parallax="scroll" data-image-src="images/image27.jpg">
+      <nav class="navbar">
+          <div class="container">
+              <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="/">
+                  <img src="images/logo.png" alt="Logo" />
+              </a>
+              </div>
+              <div class="collapse navbar-collapse" id="navbar-collapse">
+              <ul class="nav navbar-nav navbar-right">
+                  <li><a href="/">Home</a></li>
+                  <li><a href="services">Services</a></li>
+                  <li><a href="gallery">Project Gallery</a></li>
+                  <li><a href="quote">Get A Quote</a></li>
+                  <li><a href="quote#contact">Contact Me</a></li>
+              </ul>
+              </div>
+          </div>
+      </nav>      <div class="container">
+        <div class="jumbotron">
+          <h1><span class="cap">G</span>round <span class="cap">E</span>ffects <small>Landscaping</small></h1>
+        </div>
+      </div>
+    </header>
+
+        <section id="services" class="card">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-8">
+                <h6>Services</h6>
+                <h2>More than 20 Years of Craftsmanship</h2>
+                <img src="images/logo.png" alt="Logo" />
+                <p>From small to large projects, we look forward to meeting you and understanding what you want out of your yard. We do all we can to design a beautiful, useful space for your family. As a team of experts, we come together to deliver beauty down to every detail! We love to help make your yard a place you're proud to come home too, a place you want to use, a place you don't mind bragging about... because this... is your outdoor space! Welcome home! Welcome to the Ground Effects difference! Experts in design... Experts in installation!</p>
+              </div>
+              <div class="col-md-3 col-md-offset-1">
+                <h6>Get a</h6>
+                <h2>Quote</h2>
+                <p>All estimates are free and flexible according to materials and scheduling.</p>
+                <a href="/quote" class="button">Request</a>
+              </div>
+            </div>
+          </div>
+        </section>
+    
+        <section id="image-gap" data-parallax="scroll" data-image-src="images/image28.jpg"></section>
+    
+        <section id="testimonials" class="card">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-7">
+                <h2>Testimonials</h2>
+                <blockquote>
+                  <p>Tyler and his crew are fabulous! Tyler provided a plan based on our ideas and he performed a miracle! He stayed within our budget and he kept us informed all along the project. He promptly returns any calls or texts, and his crew is courteous and keeps the work area clean of any debris. We have plans for phase 2 next year and Ground Effects (Tyler) will be back to complete our total project.</p>
+                  <cite><a href="http://www.houzz.com/viewReview/689056">cpenni1</a></cite>
+                </blockquote>
+                <blockquote>
+                  <p>The project included an outdoor kitchen, fire pit, pergola, pavers, and addition of landscaping including trees and shrubbery and plants. We found Tyler Burns to be highly professional, detail oriented, prompt, courteous, and straightforward and honest. His design based upon our inputs and bringing the project from concept to reality added great value to the project. We were enormously pleased with the results and would highly recommend Tyler Burns and Ground Effects.</p>
+                  <cite><a href="http://www.houzz.com/viewReview/688026">K. Keeter</a></cite>
+                </blockquote>
+                <blockquote>
+                  <p>Tyler and his crew created a masterpiece with our landscaping in downtown Bentonville. People stop all the time to ask who completed our work and we are always happy to give a recommendation.</p>
+                  <p>Outside of a few minor rain delays, all work was completed on time and the crew was always respectful. Tyler put a lot of ownership in the work and checked in with us daily to provide updates.</p>
+                  <p>We are very happy we selected Ground Effects to add the great finishing touch to our remodel home.</p>
+                  <cite><a href="http://www.houzz.com/viewReview/602760">J. Ratcliff</a></cite>
+                </blockquote>
+                <blockquote>
+                  <p>Ground Effects Landscaping did an amazing job transforming our property! They did it all - they installed sod, built a stone patio, cedar pergola, flower beds, custom fence, custom gas fire pit, flower and foliage beds, and most importantly did it all within agreed upon budget and on time. Their cleanup is PERFECT. They also check in after the project to ensure everything is still being enjoyed. I give Tyler Burns and Ground effects the highest recommendation.</p>
+                  <cite><a href="http://www.houzz.com/viewReview/660313">webuser_166599</a></cite>
+                </blockquote>
+              </div>
+              <div class="col-md-4 col-md-offset-1">
+                <h5>My Promise</h5>
+                <p>To use only the best in materials: wood, stone, concrete and steel. All elements of lasting value! I provide a 1 year guarantee on all labor and plant material. I never compromise quality for time. I work at giving my clients realistic schedules that accommodate their lives. I strive for honest customer service and work that is completed to your satisfaction.</p>
+                <h5>See my handy work</h5>
+                <a href="/gallery" class="button">Project Gallery</a>
+                <hr />
+                <h2>About Me &amp; My Team</h2>
+                <h5>My name is Tyler Burns.</h5>
+                <p>I started Ground Effects in 1996 out of my parents' truck doing only small landscape jobs with nothing more than a pick, shovel, and a desire to create. Although I knew only the basics of landscaping then, I was passionate about creating beautiful, usable spaces for people to enjoy for years to come.</p>
+                <p>Since then, we've grown in knowledge and in size. Our crews have a combined experience of over 40 years of landscape installation! We stay up to date on the latest technology in our ﬁeld through educational classes and workshops. We are certiﬁed in paver installation and are a state-licensed landscape contractor. We are large enough to take on any project size, but small enough to give our customers the personal attention they deserve. All of us enjoy what we do and it shows in our work!</p>
+                <hr />
+              </div>
+            </div>
+          </div>
+        </section>
+
+    <div class="container"><hr /></div>
+
+    <footer id="footer">
+        <h2>Get A Quote</h2>
+        <a href="/quote" class="button">Request</a>
+        <div>
+            <a href="http://www.houzz.com/pro/tqburns/ground-effects-landscaping">Houzz</a>
+            &bull;
+            <a href="https://www.facebook.com/Ground-Effects-Landscaping-161070937278668">Facebook</a>
+            &bull;
+            <a href="https://www.instagram.com/groundefx/">Instagram</a>
+        </div>
+    </footer>
+
+    <!-- JavaScript -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <!-- Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.3.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="/__/firebase/8.3.1/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+
+    <script src="js/parallax.min.js"></script>
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
+      $(function() {
+        function isOverflowing($el) {
+          return $el.prop('scrollWidth') > $el.width();
         }
+
+        var $h1 = $('.jumbotron h1');
+        var maxFontSize = parseInt($h1.css('font-size'), 10);
+        $(window).resize(function() {
+          for (var fontSize = maxFontSize; fontSize > 0; fontSize -= 1) {
+            $h1.css('font-size', fontSize + 'px');
+            if (!isOverflowing($h1)) {
+              break;
+            }
+          }
+          //alert(fontSize);
+        }).resize();
       });
     </script>
   </body>
